--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: llmops-app
-        image: manikhandan/studybuddy:latest
+        image: manikhandan/studybuddy:v5
         ports:
         - containerPort: 8501
         env:
